RESOLVED FIXED 244673
rdar://99440019 (REGRESSION(254007@main): [ iOS macOS Debug ] 5X TestWebKitAPI.Content(API tests) are constant crashes (244669))
https://bugs.webkit.org/show_bug.cgi?id=244673
Summary rdar://99440019 (REGRESSION(254007@main): [ iOS macOS Debug ] 5X TestWebKitAP...
Alex Christensen
Reported 2022-09-01 09:20:51 PDT
This adds a missing initialization call.
Attachments
Alex Christensen
Comment 1 2022-09-01 09:21:55 PDT
EWS
Comment 2 2022-09-01 12:08:23 PDT
Committed 254060@main (3fdf5bf15440): <https://commits.webkit.org/254060@main> Reviewed commits have been landed. Closing PR #3913 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2022-09-01 12:09:15 PDT
Alexey Proskuryakov
Comment 4 2022-09-04 12:17:14 PDT
*** Bug 244669 has been marked as a duplicate of this bug. ***
EWS
Comment 5 2022-11-16 18:43:15 PST
Committed 252432.834@safari-7614-branch (656a964689f2): <https://commits.webkit.org/252432.834@safari-7614-branch> Reviewed commits have been landed. Closing PR #213 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.