rdar://99440019 (REGRESSION(254007@main): [ iOS macOS Debug ] 5X TestWebKitAPI.Content(API tests) are constant crashes (244669)) https://bugs.webkit.org/show_bug.cgi?id=244673

Reviewed by Brady Eidson.

* Source/WebCore/contentextensions/ContentExtensionParser.cpp:
(WebCore::ContentExtensions::isValidCSSSelector):

Canonical link: https://commits.webkit.org/254060@main